minor color text changes, navbar size fix on small vp

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App{
   height: 100%;
+  width: 100%;
   background-color: #272727;
 
 }
