--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -117,4 +117,9 @@ nav {
     width: 100%;
     justify-content: space-between;
   }
+
+  .asterisk{
+    width: 12px;
+    height: auto;
+  }
 }
